--- a/Spring_Boot/demo-boot-mvc/src/main/resources/static/index.html
+++ b/Spring_Boot/demo-boot-mvc/src/main/resources/static/index.html
@@ -5,6 +5,7 @@
     <title>Title</title>
 </head>
 <body>
+<h1>Hello Static Resource</h1>
 
 <script src = "/webjars/jquery/dist/jquery.min.js"></script>
 <script>
